# woort

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: woort.h
src/: CMakeLists.txt  woort.c  woort_atomic.h  woort_bitset.c  woort_bitset.h  woort_codeenv.c  woort_codeenv.h  woort_diagnosis.c  woort_diagnosis.h  woort_hashmap.c  woort_hashmap.h  woort_linklist.c  woort_linklist.h  woort_lir.c  woort_lir.h  woort_lir_block.c  woort_lir_block.h  woort_lir_compiler.c  woort_lir_compiler.h  woort_lir_function.c  woort_lir_function.h  woort_log.c  woort_log.h  woort_opcode.h  woort_opcode_formal.h  woort_spin.c  woort_spin.h  woort_threads.c  woort_threads.h  woort_util.c  woort_util.h  woort_value.h  woort_vector.c  woort_vector.h  woort_vm.c  woort_vm.h
test/: CMakeLists.txt  test_main.c
